# campo-de-producao-de-petroleo-BCS

./: .gitignore  README.md  initialization_oil_production_basic.py  manifold.py  pyproject.toml
src/: RNA_FLAG.py  RNA_Global.py  bcs_models.py  dados.pkl  hello.py  initialization_oil_production_basic.py  optimize.py  optimize2_model.py  optimize3_model.py  optimize_model.py  plotgraf.py  rna_flag.py  rna_global.py
src/RNA/: RNA_FLAG.py  aswdawsd.py  optimize_rna.py  rna_flag.py  rna_flag_model (2).pth  rna_flag_model_fbp.pth  rna_global.py  rna_global_model (10).pth  rna_global_model.pth  rna_global_model_sbai.pth  rna_global_model_sbai_ultimate.pth
src/otimização/: Graficos_Otimização.py  PSO-DE.py  PSO-DE_ADP.py  PSO-DE_final.py  initialization_oil_production_basic.py  manifold.py  optimize2_model.py  optimize3_model.py  optimize_RNA.py  optimize_model.py  plotgraf.py  pso - coutinho.py  remake flag.py  rna_global.py
